2005-04-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/parser.yy (lilypond): Add token aliases.

	* Documentation/user/music-glossary.tely (accidental): Fixes.  Do
	not confuse with alteration.
	(alteration): Add.

2005-04-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.5.19 

	* Documentation/user/lilypond-book.itely (Invoking lilypond-book):
	only put xrefs in info documentation.

	* make/ly-rules.make ($(outdir)/%.html.omf): transplant .dvi ->
	.pdf rule to tex-rules.make.

	* scm/framework-eps.scm (dump-stencils-as-EPSes): remove comments
	from -systems.* output.

	* stepmake/stepmake/tex-rules.make ($(outdir)/%.pdf): make PDF
	directly, remove -$(PAGESIZE) target.

	* input/test/embedded-postscript.ly: update.

2005-04-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lysdoc-targets.make (local-WWW): remove ps.gz target.

	* Documentation/user/changing-defaults.itely (Font selection):
	document font-name.

	* input/regression/font-name.ly: show Pango fonts for
	font-name. Update example. 

	* lily/pango-select.cc (properties_to_pango_description): don't
	convert symbol font-size to number, but use to lookup.

	* python/fontextract.py (write_extracted_fonts): add VMusage 0.

	* scm/framework-ps.scm (write-preamble): use (NAME . CONTENTS) and
	(NAME . FILE-NAME) tuples for font descriptions. 
	(write-preamble): display BeginFont DSC comments.

	* python/fontextract.py (write_extracted_fonts): new file. Extract
	font resources from a PS file.

	* scripts/lilypond-book.py (option_definitions): --psfonts option.
	(Compile_error.process_include): do_file returns chunks.

	* make/ly-vars.make (DVIPS_FLAGS): don't load .map file.

	* make/lysdoc-targets.make: .texi is .PRECIOUS

	* scripts/lilypond-book.py (write_if_updated): new function.

2005-04-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-eps.scm (dump-stencils-as-EPSes): Massage messages.

2005-04-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>
