@@ -27,13 +27,11 @@
 #(if (and (ly:get-option 'old-relative)
       (defined? 'input-file-name)
       (not (ly:get-option 'old-relative-used)))
-  (ly:warning (string-append
-	    "\n"
-	    input-file-name ": old relative compatibility was not used."
-	)))%% there is a problem at the end of the input file
+  (old-relative-not-used-message input-file-name))%% there is a problem at the end of the input file
 
-#(if (not version-seen?)
-  (version-not-seen-message))
+#(if (and (not version-seen?)
+      (defined? 'input-file-name))
+  (version-not-seen-message input-file-name))
 
 #(if (pair? toplevel-scores)
   (ly:parser-print-book parser
